[package]
name = "banshee-circuits"
version = "0.1.0"
authors = ["timoftime <timofey@chainsafe.io>"]
edition = "2021"
license = "MIT OR Apache-2.0"

[dependencies]
halo2_proofs = { git = "https://github.com/privacy-scaling-explorations/halo2.git", features = ["circuit-params"], tag = "v2023_04_20" }
num = "0.4"
sha3 = "0.10"
array-init = "2.0.0"
strum = "0.24"
strum_macros = "0.24"
rand_xorshift = "0.3"
rand = "0.8"
itertools = "0.10.3"
lazy_static = "1.4"
log = "0.4"
num-bigint = { version = "0.4" }
rand_chacha = "0.3"
snark-verifier = { git = "https://github.com/privacy-scaling-explorations/snark-verifier", tag = "v2023_04_20", default-features = false, features = ["loader_halo2", "system_halo2"] }
cli-table = { version = "0.4", optional = true }
eth-types = { path = "../eth-types" }
gadgets = { path = "../gadgets" }
halo2-base = { git = "https://github.com/axiom-crypto/halo2-lib" }

[dev-dependencies]
hex = "0.4.3"
itertools = "0.10.1"
serde = { version = "1.0.130", features = ["derive"] }
serde_json = "1.0.78"

[features]
default = []
