[package]
name = "contract-tests"
version = "0.1.0"
edition = "2021"

[dependencies]
ethers = "2.0.10"

[dev-dependencies]
rstest = "0.18.2"
tokio = { version = "1.32.0", features = ["rt", "macros"] }
anyhow = "1.0.75"
itertools = "0.11.0"

lightclient-circuits = { workspace = true }
test-utils = { workspace = true }
halo2curves = { workspace = true }
eth-types = { workspace = true }
ssz-rs = { workspace = true }
halo2-base = { workspace = true }
