[package]
name = "contracts"
version = "0.1.0"
edition = "2021"

[lib]
path = "rust-abi/lib.rs"

[dependencies]
ethers = "2.0.10"
lightclient-circuits.workspace = true
eth-types.workspace = true
ssz_rs.workspace = true
halo2curves = { workspace = true }
itertools = { workspace = true }
halo2-base = { workspace = true }