[package]
name = "eth-types"
version = "0.1.0"
authors = ["The appliedzkp team", "timoftime <timofey@chainsafe.io>"]
edition = "2021"
license = "MIT OR Apache-2.0"

[dependencies]
hex = "0.4"
lazy_static = "1.4"
halo2_proofs = { git = "https://github.com/privacy-scaling-explorations/halo2.git", tag = "v2023_02_02" }
halo2-ecc = { git = "https://github.com/axiom-crypto/halo2-lib", branch = "community-edition", default-features = false }
regex = "1.5.4"
serde = {version = "1.0.130", features = ["derive"] }
serde_json = "1.0.66"
# serde_with = "1.12"
uint = "0.9.1"
itertools = "0.10"
subtle = "2.4"
num = "0.4"
num-bigint = { version = "0.4" }
strum_macros = "0.24"
strum = "0.24"
halo2curves = { git = "https://github.com/privacy-scaling-explorations/halo2curves", tag = "0.3.1" }
pasta_curves = "0.4.1"
