[package]
name = "eth-types"
version = "0.1.0"
authors = ["The appliedzkp team", "timoftime <timofey@chainsafe.io>"]
edition = "2021"
license = "MIT OR Apache-2.0"

[dependencies]
pasta_curves.workspace = true
uint.workspace = true
hex.workspace = true
halo2_proofs.workspace = true
halo2-ecc.workspace = true
serde.workspace = true
serde_json.workspace = true
itertools.workspace = true
halo2curves.workspace = true
regex = "1.5.4"
lazy_static = "1.4"
subtle = "2.4"
num = "0.4"
num-bigint.workspace = true
strum_macros = "0.24"
strum = "0.24"