[package]
name = "lightclient-circuits"
version = "0.1.0"
authors = ["timoftime <timofey@chainsafe.io>", "ec2 <eric@chainsafe.io>"]
edition = "2021"
license = "MIT OR Apache-2.0"

[dependencies]
# halo2
halo2_proofs.workspace = true
halo2curves.workspace = true
halo2-base.workspace = true
halo2-ecc.workspace = true
poseidon.workspace = true
# verifier SDK
snark-verifier.workspace = true
snark-verifier-sdk.workspace = true
# crypto
group.workspace = true
num-bigint.workspace = true
pasta_curves.workspace = true
ff.workspace = true
sha2.workspace = true
# ethereum
ssz_rs = { workspace = true, features = ["serde"] }
ethereum-consensus-types ={ workspace = true, features = ["serde"] }

# local
eth-types.workspace = true

# misc
ark-std.workspace = true
serde.workspace = true
serde_json.workspace = true
itertools.workspace = true
log.workspace = true
hex.workspace = true
poseidon_native.workspace = true
rayon = "1.7.0"
array-init = "2.0.0"
strum = "0.25"
strum_macros = "0.25"
rand = "0.8"
lazy_static = "1.4"

[dev-dependencies]
rstest = "0.18.2"
test-utils = { workspace = true }

[features]
default = []
