[package]
name = "lightclient-circuits"
version = "0.1.0"
authors = ["timoftime <timofey@chainsafe.io>", "ec2 <eric@chainsafe.io>"]
edition = "2021"
license = "MIT OR Apache-2.0"

[dependencies]
# halo2
halo2curves.workspace = true
halo2-base.workspace = true
halo2-ecc.workspace = true
zkevm-hashes.workspace = true

# verifier SDK
snark-verifier.workspace = true
snark-verifier-sdk.workspace = true

# crypto
group.workspace = true
num-bigint.workspace = true
pasta_curves.workspace = true
ff.workspace = true
sha2.workspace = true
pse-poseidon = { git = "https://github.com/axiom-crypto/pse-poseidon.git" }

# ethereum
ethereum-types = {workspace = true, default-features = false }
tree_hash.workspace = true

# local
eth-types.workspace = true

# misc
serde.workspace = true
serde_json.workspace = true
itertools.workspace = true
log.workspace = true
hex.workspace = true
rayon = "1.7.0"
array-init = "2.0.0"
rand = "0.8"
lazy_static = "1.4"
getset = "0.1.2"
rand_chacha = "0.3.0"

[dev-dependencies]
ark-std.workspace = true
rstest = "0.18.2"
test-utils = { workspace = true }

[features]
default = []
