[package]
name = "preprocessor"
version = "0.1.0"
edition = "2021"

[lib]
name = "preprocessor"
path = "src/lib.rs"

[[bin]]
name = "unit-test-gen"
path = "src/unit_test_gen.rs"
required-features = ["test-gen"]


[dependencies]
halo2curves.workspace = true
group.workspace = true

# misc
eyre = "0.6"
tokio = { version = "1", features = ["full"] }
url = "2.2.2"

hex.workspace = true
log.workspace = true
itertools.workspace = true
serde_json.workspace = true
serde.workspace = true

ethereum-types = {workspace = true, default-features = false }
eth2.workspace = true
tree_hash.workspace = true
merkle_proof.workspace = true

# local
eth-types.workspace = true
lightclient-circuits.workspace = true
reqwest = "0.11.22"

blst = { version = "0.3.11", default-features = false, features = [ "portable", "no-threads" ]}

[dev-dependencies]
halo2-base.workspace = true
snark-verifier-sdk.workspace = true
ark-std.workspace = true

[features]
test-gen = []