[package]
name = "spectre-prover"
version = "0.1.0"
edition = "2021"

[dependencies]
# cli
clap = { version = "=4.2", features = ["derive"] }
strum = { version = "=0.25", features = ["derive"] }
cli-batteries = "=0.4"
eyre = "0.6"
anstyle = "=1.0.0"
axum = "0.6"
tokio = { version = "1.32", features = ["macros"] }

jsonrpc-v2 = { version = "0.12", default-features = false, features = ["easy-errors", "macros", "bytes-v10"] }

http = "0.2"

# halo2
halo2curves.workspace = true
# verifier SDK 
snark-verifier.workspace = true
snark-verifier-sdk.workspace = true
halo2_solidity_verifier.workspace = true
# local
lightclient-circuits.workspace = true
preprocessor.workspace = true
eth-types.workspace = true

# misc
itertools.workspace = true
serde.workspace = true
serde_json.workspace = true
log.workspace = true
url = "2"

# ethereum
ethers = { version = "2.0.7", default_features = false, features = [
    "ethers-solc",
    "abigen",
] }
primitive-types = "0.12.2"
reqwest = "0.11.22"

[build-dependencies]
cli-batteries = "=0.4"
