[package]
name = "spectre-prover"
version = "0.1.0"
edition = "2021"

[[bin]]
name = "spectre-prover-cli"
path = "src/main.rs"

[dependencies]
# cli
clap = { version = "4.2", features = ["derive"] }
strum = { version = "=0.25", features = ["derive"] }
cli-batteries = "=0.4"
eyre = "0.6"
anstyle = "=1.0.0"
axum = "0.6"
tokio = { version = "1.32", features = ["macros"] }

jsonrpc-v2 = { version = "0.12", default-features = false, features = ["easy-errors", "macros", "bytes-v10"] }

http = "0.2"

# halo2
halo2curves.workspace = true

# verifier SDK 
snark-verifier.workspace = true
snark-verifier-sdk.workspace = true
halo2_solidity_verifier = { git = "https://github.com/privacy-scaling-explorations/halo2-solidity-verifier", branch = "ac/initial-verifier-PR", optional = true }
halo2_solidity_verifier_new = { path = "../../halo2-solidity-verifier", package = "halo2_solidity_verifier", features = ["evm"], optional = true }


# local
lightclient-circuits.workspace = true 
preprocessor.workspace = true
eth-types.workspace = true

# misc
itertools.workspace = true
serde.workspace = true
serde_json.workspace = true
log.workspace = true
url = "2"

# ethereum
ethers = { version = "2.0.7", default_features = false, features = [
    "ethers-solc",
    "abigen",
] }
primitive-types = "0.12.2"
reqwest = "0.11.22"
beacon-api-client.workspace = true
ethereum-consensus-types.workspace = true
futures = "0.3.29"

[build-dependencies]
cli-batteries = "=0.4"

[features]
default = ["halo2_solidity_verifier"]
experimental = ["halo2_solidity_verifier_new"]
