[package]
name = "spectre-prover"
version = "0.1.0"
edition = "2021"

[[bin]]
name = "spectre-prover-cli"
path = "src/main.rs"

[dependencies]
# cli
clap = { version = "4.2", features = ["derive"] }
strum = { version = "=0.25", features = ["derive"] }
hex = "0.4"
eyre = "0.6"
axum = { version = "0.7", features = ["tracing", "tower-log"] }
tokio = { version = "1.32", features = ["macros"] }
jsonrpc-v2 = { version = "0.13", default-features = false, features = ["easy-errors", "macros", "bytes-v10", "hyper-integration"] }
tracing-subscriber = "0.3"

# halo2
halo2curves.workspace = true

# verifier SDK 
snark-verifier.workspace = true
snark-verifier-sdk.workspace = true
halo2_solidity_verifier_new = {  git = "https://github.com/ChainSafe/halo2-solidity-verifier", branch = "bump-halo2proofs", package = "halo2_solidity_verifier", features = ["evm"], optional = true }

# local
lightclient-circuits.workspace = true 
preprocessor.workspace = true
eth-types.workspace = true

# misc
ark-std.workspace = true
itertools.workspace = true
serde.workspace = true
serde_json.workspace = true
getset.workspace = true
log.workspace = true
url = "2"

# ethereum
ethers = { version = "2.0.7", default_features = false, features = [
    "ethers-solc",
    "abigen",
] }
primitive-types = "0.12.2"
reqwest = "0.11.22"
beacon-api-client.workspace = true
ethereum-consensus-types.workspace = true
ssz_rs.workspace = true
ethereum-consensus = { git = "https://github.com/ralexstokes/ethereum-consensus.git", rev = "f3bff52e9c43866f231ec40c8ab0e34125a8957f", optional = true }


[features]
default = []
experimental = ["halo2_solidity_verifier_new"]
