[package]
name = "test-utils"
version = "0.1.0"
edition = "2021"

[dependencies]
lightclient-circuits = { workspace = true }
ethereum-consensus-types = { workspace = true }
eth-types = { workspace = true }
contracts = { workspace = true }
ssz_rs = { workspace = true }
halo2curves = { workspace = true }
halo2-base = { workspace = true }

itertools = "0.11.0"
hex = "0.4.3"
serde = { version = "1.0.130", features = ["derive"] }
anyhow = "1.0.75"
ethers = "2.0.10"

test-utils = { git = "https://github.com/ChainSafe/ethereum-consensus-types", branch = "capella" }

snap = "1.1.0"
serde_yaml = "0.9.19"
