[package]
name = "zkcasper-circuits"
version = "0.1.0"
authors = ["timoftime <timofey@chainsafe.io>"]
edition = "2021"
license = "MIT OR Apache-2.0"

[dependencies]
halo2_proofs = { git = "https://github.com/privacy-scaling-explorations/halo2.git", tag = "v2023_02_02", features = ["dev-graph"] }
halo2-base = { git = "https://github.com/axiom-crypto/halo2-lib", default-features = false, features = ["halo2-pse", "display"] }
serde = { version = "1.0.130", features = ["derive"] }
serde_json = "1.0.78"
num = "0.4"
sha2 = "0.10.6"
array-init = "2.0.0"
strum = "0.25"
strum_macros = "0.25"
rand_xorshift = "0.3"
rand = "0.8"
itertools = "0.10.3"
lazy_static = "1.4"
log = "0.4"
num-bigint = { version = "0.4" }
rand_chacha = "0.3"
snark-verifier = { git = "https://github.com/privacy-scaling-explorations/snark-verifier", tag = "v2023_02_02", default-features = false, features = ["loader_halo2", "system_halo2"] }
cli-table = { version = "0.4", optional = true }
eth-types = { path = "../eth-types" }
gadgets = { path = "../gadgets" }
banshee-preprocessor = { path = "../preprocessor" }
ethereum-consensus = { git = "https://github.com/ralexstokes/ethereum-consensus", rev="46ca171"}

[dev-dependencies]
hex = "0.4.3"
itertools = "0.10.1"


[features]
default = []
